--- a/ha-blueprint-on-off-schedule-with-inputs.yaml
+++ b/ha-blueprint-on-off-schedule-with-inputs.yaml
@@ -1,12 +1,12 @@
 # Blueprint metadata
 blueprint:
   name: On-Off schedule with state persistence using input_datetime
-  description: A simple on-off schedule, with the addition of state persistence across disruptive events, making sure the target device is always in the expected state.  Enable and set schedule using inputs in the front end.
-  source_url: https://github.com/brianewman/ha-blueprint-on-off-schedule-with-inputs/ha-blueprint-on-off-schedule-with-inputs.yaml
+  description: A simple on-off schedule, with the addition of state persistence across disruptive events, making sure the target device is always in the expected state.  Enable and set schedule using inputs in the front end.  (Based on "On-Off schedule with state persistence" by Matteo Agnoletto)
+  source_url: https://github.com/brianewman/ha-blueprint-on-off-schedule-with-inputs/blob/main/ha-blueprint-on-off-schedule-with-inputs.yaml
   domain: automation
   input:
-	enable_schedule:
-	  name: Enable light
+    enable_schedule:
+      name: Enable light
       description: Enable the actions of the automation to set the ligtht's state. Select an input_boolean entity for this input.
       selector: 
         entity:
