--- a/ha-blueprint-on-off-schedule-with-inputs.yaml
+++ b/ha-blueprint-on-off-schedule-with-inputs.yaml
@@ -21,13 +21,13 @@ blueprint:
       description: Time when the target should be placed in the on state.  Select an input_datetime for this input.
       selector:
         entity:
-          domain: input_boolean
+          domain: input_datetime
     off_time:
       name: Off Time
       description: Time when the target should be placed in the off state.  Select an input_datetime for this input.
       selector:
         entity:
-          domain: input_boolean
+          domain: input_datetime
     custom_trigger_event:
       name: Custom Trigger Event
       description: (Optional) A custom event which can trigger the state check (eg. a powercut event reported by external integrations).
