--- a/ha-blueprint-on-off-schedule-with-inputs.yaml
+++ b/ha-blueprint-on-off-schedule-with-inputs.yaml
@@ -42,11 +42,11 @@ blueprint:
 # Automation schema
 variables:
   # convert input tags to variables, to be used in templates
-  off_time: !input 'off_time'
-  on_time: !input 'on_time'
+  off_time: !input off_time
+  on_time: !input on_time
   trigger_at_homeassistant_startup: !input trigger_at_homeassistant_startup
   # time format used by strptime
-  time_fmt: '%H:%M'
+  time_fmt: '%H:%M:%S'
   # first define whether on_time or off_time is the first event to occur during a specific day
   first_event: '{{ on_time if strptime(on_time,time_fmt).time() < strptime(off_time,time_fmt).time() else off_time }}'
   second_event: '{{ on_time if strptime(on_time,time_fmt).time() >= strptime(off_time,time_fmt).time() else off_time }}'
