--- a/ha-blueprint-on-off-schedule-with-inputs.yaml
+++ b/ha-blueprint-on-off-schedule-with-inputs.yaml
@@ -56,9 +56,9 @@ max_exceeded: silent
 # trigger at specified time, home assistant startup or when the custom event is fired
 trigger:
   - platform: time
-    at:
-      - !input on_time
-      - !input off_time
+    at: !input on_time
+  - platform: time
+    at: !input off_time
   - platform: homeassistant
     event: start
   - platform: event
