--- a/ha-blueprint-on-off-schedule-with-inputs.yaml
+++ b/ha-blueprint-on-off-schedule-with-inputs.yaml
@@ -56,7 +56,7 @@ max_exceeded: silent
 # trigger at specified time, home assistant startup or when the custom event is fired
 trigger:
   - platform: time
-    at: !input on_time
+    at: input_datetime.fountain_time_on
   - platform: time
     at: !input off_time
   - platform: homeassistant
