--- a/ha-blueprint-on-off-schedule-with-inputs.yaml
+++ b/ha-blueprint-on-off-schedule-with-inputs.yaml
@@ -18,17 +18,17 @@ blueprint:
         target:
     on_time:
       name: On Time
-      description: Time when the target should be placed in the on state.  Select an input_datetime for this input.
+      description: Time when the target should be placed in the on state.
+      default: '00:00'
       selector:
-        entity:
-          domain: input_datetime
+        time:
     off_time:
       name: Off Time
-      description: Time when the target should be placed in the off state.  Select an input_datetime for this input.
+      description: Time when the target should be placed in the off state.
+      default: '00:00'
       selector:
-        entity:
-          domain: input_datetime
-    custom_trigger_event:
+        time:
+   custom_trigger_event:
       name: Custom Trigger Event
       description: (Optional) A custom event which can trigger the state check (eg. a powercut event reported by external integrations).
       default: ''
@@ -57,12 +57,6 @@ max_exceeded: silent
 trigger:
   - platform: time
     at: input_datetime.fountain_time_on
-  - platform: time
-    at: !input off_time
-  - platform: homeassistant
-    event: start
-  - platform: event
-    event_type: !input custom_trigger_event
 # if triggered by the homeassistant platform check if the automation should be run, as specified by the user
 # if triggered by something else, just continue
 condition:
