--- a/ha-blueprint-on-off-schedule-with-inputs.yaml
+++ b/ha-blueprint-on-off-schedule-with-inputs.yaml
@@ -1,5 +1,5 @@
 # Blueprint metadata
-blueprint: 
+blueprint:
   name: On-Off schedule with state persistence using input_datetime
   description: A simple on-off schedule, with the addition of state persistence across disruptive events, making sure the target device is always in the expected state.  Enable and set schedule using inputs in the front end.  (Based on "On-Off schedule with state persistence" by Matteo Agnoletto)
   source_url: https://github.com/brianewman/ha-blueprint-on-off-schedule-with-inputs/blob/main/ha-blueprint-on-off-schedule-with-inputs.yaml
@@ -45,7 +45,7 @@ variables:
   off_time: !input off_time
   on_time: !input on_time
   trigger_at_homeassistant_startup: !input trigger_at_homeassistant_startup
-  backward_time: '{{ states.on_time.state >= states.off_time.state }}'
+  backward_time: '{{ false }}'
 mode: single
 max_exceeded: silent
 
