--- a/ha-blueprint-on-off-schedule-with-inputs.yaml
+++ b/ha-blueprint-on-off-schedule-with-inputs.yaml
@@ -71,8 +71,11 @@ action:
   - choose:
       # if current time is in the range first_event...second_event the target must be in the first_event state
       - conditions:
-          - condition: template
-            value_template: '{{ now().time() >= states.on_time.state and now().time() < states.off_time.state }}'
+        {% set cdate = now().strftime("%Y-%m-%d ") %}
+        {% set ctime = (now().timestamp() + 1) | int %}
+        {% set ontime = as_timestamp(strptime(cdate + states(time_on), '%Y-%m-%d %H:%M:%S')) | int %}
+        {% set offtime = as_timestamp(strptime(cdate + offtime, '%Y-%m-%d %H:%M:%S')) | int %}
+        {{ (offtime < ctime < ontime) if backward_time else (ontime < ctime < offtime) }}
         sequence:
           - service: 'homeassistant.{{ "turn_off" if backward_time else "turn_on"}}'
             target: !input automation_target
