--- a/ha-blueprint-on-off-schedule-with-inputs.yaml
+++ b/ha-blueprint-on-off-schedule-with-inputs.yaml
@@ -45,7 +45,7 @@ variables:
   off_time: !input off_time
   on_time: !input on_time
   trigger_at_homeassistant_startup: !input trigger_at_homeassistant_startup
-  backward_time: '{{ false }}'
+  reverse_time: {{ false }}
 mode: single
 max_exceeded: silent
 
@@ -77,12 +77,13 @@ action:
             {% set ctime = (now().timestamp() + 1) | int %}
             {% set ontime = as_timestamp(strptime(cdate + states(on_time), '%Y-%m-%d %H:%M:%S')) | int %}
             {% set offtime = as_timestamp(strptime(cdate + states(off_time), '%Y-%m-%d %H:%M:%S')) | int %}
-            {{ (offtime < ctime < ontime) if backward_time else (ontime < ctime < offtime) }}
+			{% set reverse_time = (ontime >= offtime) %}
+            {{ (offtime < ctime < ontime) if reverse_time else (ontime < ctime < offtime) }}
         sequence:
-          - service: 'homeassistant.{{ "turn_off" if backward_time else "turn_on"}}'
+          - service: 'homeassistant.{{ "turn_off" if reverse_time else "turn_on"}}'
             target: !input automation_target
     # else current time is in the range second_event...23:59:59 or 00:00:00...first_event
     # the target must be in the second_event state
     default:
-      - service: 'homeassistant.{{ "turn_on" if backward_time else "turn_off"}}'
+      - service: 'homeassistant.{{ "turn_on" if reverse_time else "turn_off"}}'
         target: !input automation_target
